stylesheet.css
html {
	overflow-y: scroll;
}

textarea {
	border-radius: 0px;

	resize: none;
	font-size: 32px;
	font-family: "Consolas";
	font-weight: normal;
}

input#SendMessage {
	border-radius: 0px;
	border: 1px solid #767676;
	
	width: 128px;
	
	font-size: 32px;
	font-family: "Consolas";
	font-weight: normal;
}

h1 {
	margin: 0;
	font-size: 64px;
	font-family: "Consolas";
	font-weight: normal;
}

h2 {
	font-size: 48px;
	margin: 0;
	font-family: "Consolas";
	font-weight: normal;
}

hr {
	margin-left: -1.5%;
	margin-right: 1.5%;
}

::-webkit-scrollbar {
	-webkit-appearance: none;
	width: 8;
}

::-webkit-scrollbar-thumb {
	border-radius: 4px;
	background-color: rgba(0, 0, 0, 0.5);
	-webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
}

body {
	background: #f0f0f0;
	margin: 0;
}

p {
	margin: 0;
	font-family: "Consolas";
	font-weight: normal;
	font-size: 32px;
}

a {
	font-family: "Consolas";
	font-weight: normal;
}

#Content {
	position: relative;
	width: 50%;
	height: 100%;
	margin: auto auto;
	background: #ffffff;
	box-shadow: 0px 0px 1rem rgba(0, 0, 0, 0.5);
}

#ContentMargin {
	width: auto;

	margin-left: 1.5%;
	margin-right: 1.5%;
}

#BackButton {
	font-weight: normal;
	font-size: 2rem;

	position: absolute;
	top: 0;
	right: 0;
	width: 84px;
	height: 84px;

	border-radius: 0px;
	border: 1px solid #9a9a9a;
	border-top-width: 0px;
	border-right-width: 0px;
}

.Link {
	font-size: 48px;
	text-decoration: 0;
	color: #551a8b;
}

.SmallLink {
	font-size: 2rem;
	text-decoration: 0;
	/*color: #0000ee;*/
	color: #551a8b;
}

.Socials {
	font-size: 2rem;
}

div.Socials {
	position: fixed;
	bottom: 0.5%;
	left: 0.5%;
}

#Github {
	position: fixed;
	bottom: 0.5%;
	right: 0.5%;
}

